# ai-saleAgent-be

./: .env.example  .gitignore  GEMINI.md  data.ipynb  manage.py  pyproject.toml  requirements.txt  tmp.py  vercel.json
.gemini/: tasks.md
.gemini/commands/: autoVerify.toml  createPlan.toml  implement.toml  manualVerify.toml  resolver.toml  task.toml
.gemini/tasks/: 20250828_1405_handle_incoming_calls_strategy.md  admin_dashboard_strategic_plan_20250825.md
ai_sales/: asgi.py  settings.py  urls.py  wsgi.py
apps/aiModule/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/aiModule/utils/: follow_up.py  output_extractor.py  util_model.py
apps/emailModule/: apps.py  tests.py  urls.py  utils.py  views.py
apps/emailModule/outlook/: __init__.py  utils.py
apps/emailModule/templates/: products.txt  template.py
apps/home/: consumers.py  routing.py  serializers.py  tests.py  urls.py  views.py
apps/home/templates/: call.html  callFrom.html  receive_call.html
apps/home/utils/: summary_email.py
apps/notifications/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  tmp.py  urls.py  views.py
apps/notifications/utils/: firebase_utils.py  send_async_notification.py
apps/twilio_calls/: apps.py  urls.py  views.py
apps/twilio_calls/templates/: incoming_call.html  outgoing_call.html
apps/twilio_calls/utils/: auto_ai.py
apps/users/: admin.py  permissions.py  urls.py
apps/users/models/: __init__.py  agent_model.py  lead_model.py  (+2 more)
utils/: create_smtp.py  imap.py  send_email.py  smtp.py
(+20 files in other folders)
