[project]
name = "ai-sales"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.7.14",
    "channels>=4.3.1",
    "channels-redis>=4.3.0",
    "charset-normalizer>=3.4.2",
    "config>=0.5.1",
    "daphne>=4.2.1",
    "django>=5.2.1",
    "django-cors-headers>=4.7.0",
    "django-q2>=1.8.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular[sidecar]>=0.28.0",
    "gunicorn>=23.0.0",
    "idna>=3.10",
    "imap-tools>=1.11.0",
    "ipykernel>=6.29.5",
    "langchain[openai]>=0.3.26",
    "langgraph>=0.5.1",
    "msal>=1.34.0",
    "psycopg2-binary>=2.9.10",
    "pyfcm>=2.1.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "twilio>=9.6.1",
    "urllib3>=2.5.0",
    "websockets>=15.0.1",
    "whitenoise>=6.11.0",
]
